--- a/public/modal-layout.css
+++ b/public/modal-layout.css
@@ -9,12 +9,16 @@ body {
 }
 
 .modal-header button.close > span:first-child {
-  display: none;
+  /*display: none;*/
+  font-size: 50px;
+  top; 10px;
+  right: 40px;
 }
 
 .modal-header button.close:before {
   content: "\f00d";
-  display: inline-block;
+  /*display: inline-block;*/
+  display: none;
   font: normal normal normal 14px/1 FontAwesome;
   font-size: 30px;
   text-rendering: auto;
